crucible/crucible-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: crucible
  name: crucible
spec:
  ports:
    - name: "8059"
      port: 8059
      targetPort: 8059
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: crucible
